--- a/src/main/java/io/github/sawors/werewolfclassic/locales/fr_FR.yml
+++ b/src/main/java/io/github/sawors/werewolfclassic/locales/fr_FR.yml
@@ -1,8 +1,8 @@
 # This file can be used as a translation template, original text (en_DEFAULT)
 # is added on top of each entry for you to know easily what to translate.
 #
-locale-name: "English (United Kingdom)"
-locale-identifier: "english"
+locale-name: "Français (France)"
+locale-identifier: "french"
 #
 # Some entries use placeholders, when translating please DO NOT modify these (you can move them,
 # but in most case do not remove placeholders from the entry).
@@ -10,7 +10,7 @@ locale-identifier: "english"
 
 roles:
   witch:
-    channel: "🐀witch"
+    channel: "🐀sorcière"
     intro:
     embed:
       title:
@@ -19,7 +19,7 @@ roles:
       action-description:
       thumbnail-url:
   seer:
-    channel: "🔮seer"
+    channel: "🔮voyante"
     intro:
     embed:
       title:
@@ -28,7 +28,7 @@ roles:
       action-description:
       thumbnail-url:
   littlegirl:
-    channel: "🌒little-girl"
+    channel: "🌒petite-fille"
     intro:
     embed:
       title:
@@ -37,7 +37,7 @@ roles:
       action-description:
       thumbnail-url:
   cupid:
-    channel: "💘cupid"
+    channel: "💘cupidon"
     intro:
     embed:
       title:
@@ -46,7 +46,7 @@ roles:
       action-description:
       thumbnail-url:
   wolf:
-    channel: "🐺wolves"
+    channel: "🐺loups"
     intro:
     embed:
       title:
@@ -54,6 +54,7 @@ roles:
       role-description:
       action-description:
       thumbnail-url:
+
 
 
 
